--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <my-element></my-element>
+    <calculator-element>
+      <keypad-element></keypad-element>
+    </calculator-element>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
