Keypad and Screen components

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <calculator-element>
-      <keypad-element></keypad-element>
-    </calculator-element>
+    <calculator-el>
+      <screen-el></screen-el>
+      <keypad-el></keypad-el>
+    </calculator-el>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
