Remove production script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <screen-el></screen-el>
       <keypad-el></keypad-el>
     </calculator-el>
-    <script src="dist/bundle.js"></script>
+    <!-- <script src="dist/bundle.js"></script> -->
   </body>
 </html>
